Fixes #1 - Add Light and Dark Mode support (#2)

--- a/sass/_load.scss
+++ b/sass/_load.scss
@@ -1,20 +1,19 @@
-$theme-1-text: #30241c;
-$theme-1-accent: #ea4f4f;
-$theme-1-background: #f3efe7;
-$theme-1-gutter: #fff;
-
-$theme-2-text: #e7edf5;
-$theme-2-accent: #4feae3;
-$theme-2-background: #323d4a;
-$theme-2-gutter: #e7edf5;
-
-$theme-3-text: #f3ebf7;
-$theme-3-accent: #ec4b62;
-$theme-3-background: #43324a;
-$theme-3-gutter: #f3ebf7;
-
-$border-black: #000;
-$border-white: #fff;
+$themes: (
+  light-theme-1-text: #30241c,
+  light-theme-1-accent: #ea4f4f,
+  light-theme-1-background: #f3efe7,
+  light-theme-1-gutter: #fff,
+  
+  dark-theme-1-text: #e7edf5,
+  dark-theme-1-accent: #4feae3,
+  dark-theme-1-background: #323d4a,
+  dark-theme-1-gutter: #e7edf5,
+  
+  dark-theme-2-text: #f3ebf7,
+  dark-theme-2-accent: #ec4b62,
+  dark-theme-2-background: #43324a,
+  dark-theme-2-gutter: #f3ebf7
+);
 
 $font-base: "edmondsans", sans-serif;
 
